--- a/src/app/tscreen/theatre/theatre.component.html
+++ b/src/app/tscreen/theatre/theatre.component.html
@@ -1,1 +1,48 @@
-<p>theatre works!</p>
+<!-- <table class="table">
+   
+   <tbody>
+  <tr *ngFor=" let item of theatres">
+        <td>{{item.TheatreName}}</td> 
+      
+    </tr>
+   </tbody>
+   
+</table> -->
+  
+
+ <section class="vh-500 gradient-custom-2">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-12 col-xl-10">
+
+     <div class="card mask-custom">
+          <div class="card-body p-4 text-white">  
+
+             
+
+      <table class="table text-white mb-0">
+               
+              <tbody>
+                <tr class="fw-normal" *ngFor=" let item of theatres">
+                  <th>
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                      alt="avatar 1" style="width: 45px; height: auto;">  
+                      <i class="fas fa-theater-masks"></i>
+                    <span class="ms-2">{{item.TheatreName}}</span>
+                     
+                  </th>
+                   
+                </tr>
+     
+              </tbody>
+            </table> 
+
+
+        </div>
+        </div> 
+
+     </div>
+    </div>
+  </div>
+</section>
+ 
