--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid ">
+<div class="container-fluid" style="height: 150px;">
     <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#">
             <img
-              src="assets/NEXTMOVIES.png"
-              height="150"
+              src="assets/NEXMOVIES1.jpg"
+              height="100"
               width="200"
                
               loading="lazy"
