--- a/src/app/movies/movie/movie.component.html
+++ b/src/app/movies/movie/movie.component.html
@@ -30,7 +30,7 @@
         <p>{{movie.description}}</p>
     </div>
     <div class="course-buttons">
-        <button class="btn btn-show" style="background-color: red; " routerLink="/theatre">BOOK TICKETS</button>
+        <button class="btn btn-show" style="background-color: red; " routerLink="/theatrelist">BOOK TICKETS</button>
         <!-- <a [routerLink]="['/screens', movie['movieId']]">BOOK TICKETS</a> -->
 
 
