--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,17 @@
-<div class="container">
+ <div class="container">
+
+      <div class="mb-3">
+        <label for="cityId" class="form-label"></label>
+        <div class="mb-3">
+            <label for="cityId" class="form-label" style="color: white; font-size: xx-large;">SELECT THEATRE</label>
+            <select class="form-select"   (change)="onselect($event)"
+            optionLabel="name"  [(ngModel)]="selectedItem"  required>
+                <option value=null>Select City</option>
+                <option  *ngFor="let theatre of theatres" (value) ="theatre.theatreId">{{theatre.theatreName}}</option>
+            </select>
+        </div> 
+ 
+
     <h1 style="font-size: 40px; color: aliceblue;">PICK A MOVIE</h1>
 
     
@@ -7,21 +20,25 @@
         <div class="course-container">
             <div class="course-card">
                 <div>
-                    <img [src]="movie.image1" style="width:420px; height:200px;">
+                    <img [src]="movie.image1" style="width:400px; height:250px;">
                 </div>
-                <div class="course-name"><h2 ><b>{{movie.title}}</b></h2></div>
-<!--                 <div class="course-description"><p>{{movie.description.slice(0, 80)}}...</p></div>
- -->                <div class="details">
-                    <div class="course-type" [ngStyle]="{color: movie.language === 'Free' ? 'Green' : 'Red'}"><b>Language:</b>{{movie.language}}</div>
-                    <div class="course-price"><b>Duration:</b> {{movie.duration}}</div>
+                <div class="course-name"><h2 style="color: blue;"><b>{{movie.title}}</b></h2></div>
+                 <div class="course-description"><p style="color: white;">{{movie.description.slice(0, 80)}}...</p></div>
+                 <div class="details">
+                    <div class="course-type" style="color: white;" ><b style="color: red;">Language:</b>{{movie.language}}</div>
+                    <div class="course-price" style="color: white;"><b>Duration:</b> {{movie.duration}}</div>
                 </div>
                 <div class="course-buttons">
                     <button class="btn btn-show" routerLink="/movie/{{movie.movieId}}">Show</button>
                     <!-- <a [routerLink]="['/movie', movie['movieId'], movie['title']]" style="background-color: red; color: aliceblue;" >BOOK NOW</a> -->
-                </div>
+                 </div>
             </div>
         </div>  
     </ng-container>
-</div>
+</div> 
+ 
 
+
+
+ 
 
