--- a/src/app/screens/screens.component.html
+++ b/src/app/screens/screens.component.html
@@ -1,349 +1,73 @@
-<div class="bg">
-    <table class="table" >
-      <div class="check">
-          <div class="screen"></div>
-      <!-- 1-10 -->
-     
-      <tr >
-         
-          <td>
-            <input type="checkbox"   class="btn-check"   id="A1" autocomplete="off">
-            <label
-              class="btn btn-outline-primary"
-              for="A1">A1</label>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" class="btn-check" id="A2" value="2">
-                    <label class="mark" for="A2"></label>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="3">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="4">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="5">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="6">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="7">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="8">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="9">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="10">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-      </tr>
-     <!-- 10-20 -->
-      <tr >
-         
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="11">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="12">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="13">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="14">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="15">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="16">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="17">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="18">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="19">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="20">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-      </tr>
-     
-         <!-- 20-30 -->
-         <tr >
-         
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="21">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="22">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="23">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="24">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="25">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="26">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="27">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="28">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="29">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-          <td>
-              <div class="checkbox-container">
-                  <label class="checkbox-label"> 
-                    <input type="checkbox" value="30">
-                    <span class="mark"></span>
-                  </label>
-              </div>
-          </td>
-      </tr>
+<div class="col" style="margin: auto;">
+    <div class="row1">
 
-       <!-- 30-40 -->
-       <tr >
+ 
+<div class="screen" ></div>
+        
+      <table >
          
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="31">
-                  <span class="mark"></span>
-                </label>
+        
+        <tr>
+          <td *ngFor="let n of checkBox | slice:0:10; ">
+            <div>
+              <label>
+                <input [disabled]="n.checked"  type="checkbox" [value]="n.id" (change)="Onchange($event)"   >
+                <span >{{n.name}}</span>
+              </label>
             </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="32">
-                  <span class="mark"></span>
+          </td>
+        </tr>
+        <tr>
+            <td *ngFor="let n of checkBox | slice:10:20;  ">
+              <div>
+                <label>
+                  <input [disabled]="n.checked" type="checkbox"   [value]="n.id" (change)="Onchange($event)" >
+                  <span >{{n.name}}</span>
                 </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="33">
-                  <span class="mark"></span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td *ngFor="let n of checkBox | slice:20:30;  ">
+              <div>
+                <label>
+                  <input [disabled]="n.checked" type="checkbox"   [value]="n.id" (change)="Onchange($event)" >
+                  <span >{{n.name}}</span>
                 </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="34">
-                  <span class="mark"></span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td *ngFor="let n of checkBox | slice:30:40;  ">
+              <div>
+                <label>
+                  <input [disabled]="n.checked" type="checkbox"   [value]="n.id" (change)="Onchange($event)" >
+                  <span >{{n.name}}</span>
                 </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="35">
-                  <span class="mark"></span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td *ngFor="let n of checkBox | slice:40:50;  ">
+              <div>
+                <label>
+                  <input [disabled]="n.checked" type="checkbox"   [value]="n.id" (change)="Onchange($event)" >
+                  <span >{{n.name}}</span>
                 </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="36">
-                  <span class="mark"></span>
-                </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="37">
-                  <span class="mark"></span>
-                </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="38">
-                  <span class="mark"></span>
-                </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="39">
-                  <span class="mark"></span>
-                </label>
-            </div>
-        </td>
-        <td>
-            <div class="checkbox-container">
-                <label class="checkbox-label"> 
-                  <input type="checkbox" value="40">
-                  <span class="mark"></span>
-                </label>
-            </div>
-        </td>
-    </tr>
-
-
+              </div>
+            </td>
+          </tr>
+      </table>
+      
+    </div>
   </div>
-  </table>
-    
+  <div >
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 style="color: white;">TOTAL SEATS:  {{totalseats}}</h1>
+    <br>
+    <h1 style="color: white;">PRICE: Rs. {{total}}</h1>
+    <br>
   </div>
-   
-    
