--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -13,89 +13,12 @@
 
 
 <!-- SILDESHOW   -->  
-<div  class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/image1.jpg" alt="First slide" height="800">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Vikram</h1>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/image2.jpg" alt="Second slide" height="800">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Three</h1>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/image3.jpg" alt="Third slide" height="800">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Bheemla Nayak</h1>
-        </div>
-      </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/image4.jpg" alt="Fourth slide" height="800">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Bimbisara</h1>
-      </div>
-    </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image5.jpg" alt="Fifth slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>Don</h1>
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image6.jpg" alt="Sixth slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>F3</h1>
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image7.jpg" alt="Seventh slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>KGF</h1>
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image8.jpeg" alt="Eighth slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>Major</h1>
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image9.jpg" alt="Nineth slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>Maran</h1>
-    </div>
-  </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="assets/image10.jpg" alt="Tenth slide" height="800">
-    <div class="carousel-caption d-none d-md-block">
-      <h1>Virata Parvam</h1>
-    </div>
-  </div>
-  </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+<div id="slider">
+	<figure>
+	  <img src="https://assets-in.bmscdn.com/promotions/cms/creatives/1646975029346_miramar.jpg" alt="imgslider1">
+	  <img src="https://assets-in.bmscdn.com/promotions/cms/creatives/1646739076676_basbassiweb.jpg" alt="imgslider2">
+	  <img src="https://assets-in.bmscdn.com/promotions/cms/creatives/1646832878859_brarwweb.jpg" alt="imgslider3">
+	</figure>
   </div>
 
 <br>
