--- a/src/app/screens/screens.component.css
+++ b/src/app/screens/screens.component.css
@@ -1,19 +1,29 @@
 .bg{
-    background-color: red;
+    background-color: rgb(23, 23, 23);
+    display: flex;
+    align-items: center;
+    justify-content: center;
  }
 
-
+.col {
+    display: flex;
+align-items: center;
+justify-content: center;
+}
 
 .screen {
-    background: #fff;
+    background: rgb(255, 255, 255);
     height: 70px;
-    width: 50%;
-    margin: 15px 0;
+    width: 100%;
+    margin: 50 px 0;
     transform: rotateX(-45deg);
     box-shadow: 0 3px 10px rgba(255,255,255,0.7);
     
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
 .table {
@@ -26,11 +36,11 @@
    
  }
 .check {
-    width: 440px;
+    width: 640px;
     margin: 150px auto;
     clear: both;
     display: block;
-    background-color: rgb(23, 23, 23, 0.5);
+    background-color: rgba(255, 6, 6, 0.5);
     border-radius: 4px;
 }
 .check::after {
@@ -118,6 +128,57 @@ color: white;
     transition: all 0.3s ease-out;
 } 
 
+/* NEW SEATLAYOUT */
 
+.row1{
+    max-width:1200px;
+    margin:0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.row1 div{
+    margin: 10px;
+}
+.row1 div label{
+    cursor: pointer;
+}
+.row1 div label input[type="checkbox"]{
+    display: none;
+}
+.row1 div label span{
+    position: relative;
+    display: inline-block;
+    background: #ced4da;
+    padding: 10px;
+    color: rgb(19, 1, 1);
+    text-shadow: 0 1px 4px rgba(13, 13, 13, 0.5);
+    border-radius: 5px;
+    font-size: 20px;
+    transition: 0.5s;
+    user-select: none;
+    overflow: hidden;
+}
+.row1 div label span :before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: rgba(255, 255, 255, 0.4);
+}
+.row1 div label input[type="checkbox"]:checked ~ span{
+    background: rgb(0, 227, 57);
+     
+}
+.row1 div label input[type="checkbox"]:hover ~ span{
+    background: rgb(4, 255, 4);
+     
+}
+ /* DISABLED BUTTON CSS */
 
- 
+ .row1 div label input[type="checkbox"]:disabled ~ span{
+    outline:1px solid red;  
+    color: rgb(255, 255, 255);
+    background-color: red;
+  }
