--- a/src/app/theatre-list/theatre-list.component.html
+++ b/src/app/theatre-list/theatre-list.component.html
@@ -10,8 +10,8 @@
   </form>
   
 
-<!-- THEATRE-LIST
- --><div class="links_container">
+<!-- THEATRE-LIST-->
+<div class="links_container">
 	<div class="title_container">
 	  <h1 style="color: white;">THEATRES</h1>
 	</div>
