--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,3 +1,34 @@
+
+<div class="cardWrap" [hidden]="!edited" id="download" #download >
+  <div class="card cardLeft">
+    <h1>Startup <span>Cinema</span></h1>
+    <div class="title">
+      <h2>How I met your Mother</h2>
+      <span>movie</span>
+    </div>
+    <div class="name">
+      <h2>Vladimir Kudinov</h2>
+      <span>name</span>
+    </div>
+     
+   
+  </div>
+  <div class="card cardRight">
+    <div class="eye"></div>
+    <div class="number">
+      <h3>156</h3>
+      <span>seat</span>
+      
+      <div class="time">
+          <h2>12:00</h2>
+          <span>time</span>
+        </div>
+    
+    </div>
+</div>
+</div>
+
+
 <div id='card' class="animated fadeIn">
     <div id='upper-side'>
       
@@ -26,6 +57,13 @@
   </div>
   <br>
   <br>
+  
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ 
   <br>
   <br>
   <br>
